Se modifico el proyecto para que guardara en servicio externo en vez de guarda las imagenes en la base de datos propia. Y al parecer ya no envia la notificacion al usuario creado. Se guardan las imagenes por hilos disminuyendo la demora que si se notaba.